<resources>
    <string name="app_name" translatable="false">Evaly</string>
    <string name="facebook_app_id" translatable="false">701695696956139</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="title_activity_view_product" translatable="false">ViewProductActivity</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="rating_and_reviews"><![CDATA[Rating & Reviews]]></string>
    <string name="title_activity_user_profile" translatable="false">UserProfile</string>
    <string name="about" translatable="false">
        E-valy is an e-commerce site which will be capable of providing every kind of goods and products from every sector to every consumer located in Bangladesh. The world’s market place will be only finger-tips away for any customer in possession of a smartphone/computer and an internet connection. They will be able to purchase everything; from a safety-pin to an apartment building from our website. We have gathered the brightest minds of Bangladesh and given them the platform to perform to their fullest extent. All the data-mining and optimization has been done in-house and no outsourcing from any organization has taken place. We are utilizing 100% Bangladeshi personnel and resources and keeping the flow of cash within our borders.

It is a platform where people can purchase all kinds of goods from a single website. From a pencil to a book to a dress to a cell phone to cars to lands; everything is available in this website. It is built by a team of developers who have the sharpest minds in this sector and they are dedicated to only Droplet Limited. We hire no outsourcing outlets and that ensures the security of all our users. There is absolutely no chance of any information being leaked thanks to our dedicated team who are working all the time to ensure that our website is the most secure e-commerce platform. What separates us from other platforms of such sorts is the diversity of our product range and the security that we provide to our users. It is absolutely cutting-edge and state-of-the-art and we can guarantee that no other platform has this much diversity in its product range. Our website is going to be so convenient and user-friendly for our customers that, they would rather order from our website than to go to the shop which is 100 meters away from his/her home. That is the kind of target eValy.com.bd has set for itself. And once we achieve our targets in Bangladesh, we will start expanding towards other countries and present ourselves in a much broader and global scale and encompass the entire world with our website in a short amount of time.
    </string>
    <string name="reset_password">Reset Password</string>
    <string name="required">Required</string>
    <string name="something_wrong">Something went wrong, please try again!</string>
    <string name="default_notification_channel_id" translatable="false">notification_ch_1</string>
    <string name="mark_as_read">Mark as Read</string>
    <string name="need_help">Need help with this order?</string>
    <string name="evaly_account">Evaly Account</string>
    <string name="taka" translatable="false">৳</string>
    <string name="cashback">Cashback</string>
    <string name="what_would_you_like_to_buy">What would you like to buy?</string>
    <string name="you_haven_t_received_any_notification">You haven\'t received any notification.</string>
    <string name="all">All</string>
    <string name="total_colon">Total:</string>
    <string name="check_out">Check Out</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="contact_us">Contact us</string>
    <string name="support">Support</string>
    <string name="maps">Maps</string>
    <string name="facebook">Facebook</string>
    <string name="evaly_address">House 8 (1st Floor), Road 14 \nDhanmondi, Dhaka-1209</string>
    <string name="email">Email</string>
    <string name="customer_care">Customer Care</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="contact_number">Contact Number</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="email_address">Email Address</string>
    <string name="update_profile">Update Profile</string>
    <string name="phone_number">Phone Number</string>
    <string name="invite_your_friends_amp_earn_money"><![CDATA[Invite your friends & earn money]]></string>
    <string name="your_invitation_code">Your Invitation Code</string>
    <string name="rate_evaly_app">Rate Evaly App</string>
    <string name="no_internet_connection_found_nplease_check_your_network_settings">No internet connection found. \nPlease check your network settings.</string>
    <string name="ooops">Ooops!</string>
    <string name="retry">Retry</string>
    <string name="invoice_no">INVOICE</string>
    <string name="order_status">ORDER TIMELINE</string>
    <string name="rate_amp_qty"><![CDATA[Rate & Qty]]></string>
    <string name="amount">Amount</string>
    <string name="evaly_pay">Evaly Pay</string>
    <string name="bal_colon">Account:</string>
    <string name="make_payment">Make Payment</string>
    <string name="pay_via_gift_card">Pay via Gift Card</string>
    <string name="report_issue">Report Issue</string>
    <string name="existing_issues">Existing Issues</string>
    <string name="verify_your_number">Verify your number</string>
    <string name="a_code_has_been_sent_to_your_number_please_check_messages_and_enter_here">A code has been sent to your number, please check messages and enter here.</string>
    <string name="password">Password</string>
    <string name="please_input_at_least_one_special_character">* Please input at least one special character</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="set_password">Set Password</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="invitation_code">Invitation Code</string>
    <string name="leave_empty_if_you_don_t_have_invitation_code">Leave empty if you don\'t have Invitation Code.</string>
    <string name="i_agree_to_the_privacy_policy_and_terms_amp_conditions_of_evaly"><![CDATA[I agree to the Privacy Policy and Terms & Conditions of Evaly.]]></string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="recent_transactions">Recent Payments</string>
    <string name="check_account">Check Account</string>
    <string name="notifications">Notifications</string>
    <string name="transaction_history">Payment History</string>
    <string name="edit_personal_info">Edit Personal Info</string>
    <string name="change_password">Change Password</string>
    <string name="messages">Messages</string>
    <string name="address">Address</string>
    <string name="addresses">Addresses</string>
    <string name="sku">SKU</string>
    <string name="description">Description</string>
    <string name="specifications">Specifications</string>
    <string name="available_at_shop">Available at shop</string>
    <string name="explore_more_products">Explore More Products</string>
    <string name="you_haven_t_added_anything_to_wish_list">You haven\'t added anything to wish list.</string>
    <string name="comments">Comments</string>
    <string name="status_text">Status text...</string>
    <string name="write_your_comment">Write your comment...</string>
    <string name="create_a_status">Create a status</string>
    <string name="add_photo">Add Photo</string>
    <string name="use_gift_card">Use Gift Card</string>
    <string name="gift_card_code">Gift card code</string>
    <string name="enter_gift_card_code">Enter gift card code</string>
    <string name="enter_amount">Enter amount</string>
    <string name="rate_evaly_on_playstore">Rate Evaly on Playstore</string>
    <string name="rate_now">Rate now</string>
    <string name="reply_to_the_comment">Reply to the comment...</string>
    <string name="replies">Replies</string>
    <string name="rate_the_product">Rate the product</string>
    <string name="write_a_review_optional">Write a review (optional)</string>
    <string name="submit_review">Submit Review</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="evaly_bal">Account</string>
    <string name="holding_bal">Holding</string>
    <string name="gift_card_bal">Gift Card</string>
    <string name="claim">Claim</string>
    <string name="campaigns">Campaigns</string>
    <string name="no_campaign_is_available_right_now">No campaign is available right now.</string>
    <string name="select_cancellation_reason">Select cancellation reason</string>
    <string name="ordered_by_mistake">Ordered by mistake</string>
    <string name="changed_my_mind">Changed my mind</string>
    <string name="entered_wrong_information">Entered wrong information</string>
    <string name="selected_wrong_product_variant">Selected wrong product variant</string>
    <string name="want_to_buy_from_another_seller">Want to buy from another seller</string>
    <string name="other_reason">Other reason</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="checkout_information">Checkout Information</string>
    <string name="enter_your_number">Enter your number</string>
    <string name="add_new_address">Add New Address</string>
    <string name="delivery_of_the_products_will_be_completed_within_approximately_15_working_days_after_payment">Delivery of the products will be completed within approximately 15 working days after payment.</string>
    <string name="place_order">PLACE ORDER</string>
    <string name="delivery_options">Delivery Options</string>
    <string name="bkash">bKash</string>
    <string name="gateway">Gateway</string>
    <string name="bank">Bank</string>
    <string name="redeem_gift_card">Redeem Gift Card</string>
    <string name="a_coupon_code_will_be_sent_to_this_email">A coupon code will be sent to this email.</string>
    <string name="no_email_added">No email added</string>
    <string name="redeem">REDEEM</string>
    <string name="gift_card">Gift Card</string>
    <string name="price_colon">Price:</string>
    <string name="value_colon">Value:</string>
    <string name="upload_bank_receipt">Upload Bank Receipt</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="verify_bkash_payment">Verify bKash Payment</string>
    <string name="how_to_make_bkash_payment">How to make bKash payment?</string>
    <string name="bkash_transaction_id_trxid">bKash Transaction ID (trxID)</string>
    <string name="wish_list">Wishlist</string>
    <string name="orders">Orders</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="dashboard">Dashboard</string>
    <string name="favorite_shops">Followed Shops</string>
    <string name="vouchers">Vouchers</string>
    <string name="contact_us_short">Contact Us</string>
    <string name="express">Express</string>
    <string name="save_address">Save Address</string>
    <string name="enter_road_no_block_sector">Enter road no, block/sector</string>
    <string name="area">Area</string>
    <string name="enter_area">Select area</string>
    <string name="enter_region">Select region</string>
    <string name="region">Division</string>
    <string name="enter_city">Select city</string>
</resources>