<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        app:showAsAction="ifRoom"
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/home"/>

    <item
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:id="@+id/wishListFragment"
        android:icon="@drawable/ic_favorite"
        android:title="@string/wish_list"/>

    <item
        app:showAsAction="ifRoom"
        android:id="@+id/expressProductSearchFragment"
        android:title="@string/express"/>

    <item
        app:showAsAction="ifRoom"
        android:id="@+id/cartFragment"
        android:icon="@drawable/ic_cart"
        android:title="@string/cart"/>


    <item
        app:showAsAction="ifRoom"
        android:id="@+id/userDashboardActivity"
        android:icon="@drawable/ic_user_nav_menu"
        android:title="@string/dashboard"/>

</menu>