<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingTop="20dp"
    android:paddingRight="20dp"
    android:paddingBottom="10dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/use_gift_card"
        android:textColor="#333"
        android:textSize="20sp"
        android:textStyle="bold" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gift_card_code"/>


    <EditText
        android:id="@+id/code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/input_bg"
        android:fontFamily="sans-serif"
        android:gravity="top"
        android:hint="@string/enter_gift_card_code"
        android:inputType="text"
        android:minLines="4"
        android:padding="15dp"
        android:textColor="#000"
        android:textSize="16sp"
        android:layout_marginBottom="15dp"/>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amount"/>
    <EditText
        android:id="@+id/amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/input_bg"
        android:fontFamily="sans-serif"
        android:gravity="top"
        android:hint="@string/enter_amount"
        android:inputType="numberDecimal"
        android:minLines="4"
        android:padding="15dp"
        android:textColor="#000"
        android:textSize="16sp" />

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/input_btn_bg"
        android:fontFamily="sans-serif"
        android:padding="15dp"
        android:stateListAnimator="@null"
        android:text="@string/make_payment"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="16sp" />


</LinearLayout>